<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".WelcomeActivity"
    tools:showIn="@layout/activity_welcome">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_text_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            style="@style/EditText"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_text_input"
        android:layout_marginTop="@dimen/gutter"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:hint="@string/email_hint"
        app:counterEnabled="true"
        app:counterMaxLength="20">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            style="@style/EditText"
            app:counterMaxLength="20"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/accept_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/element_height"
        android:layout_below="@id/email_text_input"
        android:layout_margin="@dimen/margin"
        android:background="@color/colorAccent"
        android:textColor="@color/buttonTextInverseColor"
        android:text="@string/accept"
        android:stateListAnimator="@null"
        android:elevation="@dimen/default_shadow_size"/>
</RelativeLayout>